[tool.poetry]
name = "pjsekai_background_gen_pillow"
version = "0.1.1"
description = "Generates PJSekai backgrounds with Pillow"
authors = ["sevenc-nanashi <sevenc-nanashi@sevenbot.jp>"]
license = "GPLv3"
homepage = "https://github.com/sevenc-nanashi/pjsekai_background_gen_pillow"
repository = "https://github.com/sevenc-nanashi/pjsekai_background_gen_pillow"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
